[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Interfaces/TurretKeybindEdit.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/andika-basic/AndikaNewBasic-R.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="TurretKeybindEdit" type="HBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 86.0
alignment = 1
script = ExtResource( 1 )

[node name="KeyLabel" type="Label" parent="."]
margin_left = 423.0
margin_top = 3.0
margin_right = 577.0
margin_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Select North Turret Key"
align = 1
valign = 1

[node name="KeyButton" type="Button" parent="."]
margin_left = 581.0
margin_right = 601.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 603.0
margin_right = 603.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PopupDialog"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Press new keybind to assign"
align = 1
valign = 1

[connection signal="button_up" from="KeyButton" to="." method="_on_KeyButton_button_up"]
